--- a/Mi portafolio/contact.html
+++ b/Mi portafolio/contact.html
@@ -41,7 +41,7 @@
             <input type="email" id="email" placeholder="Tu correo electronico"/>
         </div>
         <div class="form-group">
-            <label for="mensaje">Mensaje:</label>
+            <label for="msg">Mensaje:</label>
             <textarea id="msg" name="msg" rows="5" placeholder="Tu mensaje"></textarea>
         </div>
         <div class="form-group">
